Bug 56295 - doesn't work for file names > 31 chars. r=sdagley/sr=sfraser